# biwenger-tools

./: .bazelignore  .bazelrc  .dockerignore  .flake8  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TODO.md  WORKSPACE  clean-images-artifact.sh  operations.md  pytest.ini  release-notes.md  requirements.in  requirements_lock.txt
core/: BUILD.bazel  biwenger_client.py  gcp_services.py  pyproject.toml  requirements.txt  telegram_notifier.py  utils.py
core/tests/: conftest.py  constants.py  test_biwenger_client.py  test_gcp_services.py  test_telegram_notifier.py  test_utils.py
core/tests/data/: account_response.json  all_players_data.json  board_messages.json  league_users.json  login_response.json  manager_squad.json  market_players.json
docs/: TODO.md  operations.md  release-notes.md
scraper-job/: Dockerfile  README.md  config.py  get_messages.py  requirements.txt
scraper-job/logic/: processing.py
scraper_job/: BUILD.bazel  Dockerfile  get_messages.py
scraper_job/tests/: main.py  test_get_messages.py  test_processing.py
scripts/: check-gcp-costs.sh
teams_analyzer/: .gitignore  BUILD.bazel  Dockerfile  README.md  config.py  install_deps.sh  requirements.txt  teams_analyzer.py
teams_analyzer/logic/: player_matching.py  scrapers.py
teams_analyzer/tests/: test_player_matching.py  test_scrappers.py  test_team_analyzer.py
web/: BUILD.bazel  Dockerfile  README.md  app.py  config.py  deploy.sh  requirements.txt
web/templates/: admin_panel.html  base.html  index.html  ligas_especiales.html  palmares.html  participacion.html  reglamento.html  salseo.html
web/tests/: test_web_app.py
