[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.1.0"
description = "Módulo central con servicios compartidos"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
py-modules = ["biwenger_client", "gcp_services", "telegram_notifier", "utils"]